# DuplicateFileScanner

./: CMakeLists.txt  DuplicateFileIndexer.pro  DuplicateFileScanner.pro  README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/interface/: CMakeLists.txt  Deleter.cpp  Deleter.h  TreeWidgetItem.cpp  TreeWidgetItem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
test/: tests.cpp
test/gtest/: gtest.h  gtest_main.cc
